<resources>
    <string name="app_name">Tangani Covid-19</string>
    <string name="img">img</string>
    <string name="masukkan_email_anda">Masukkan email anda</string>
    <string name="masuk_untuk_memperoleh_ninformasi_terkait_covid_19">Masuk untuk memperoleh \ninformasi terkait Covid-19</string>
    <string name="masukkan_email_atau_nama_anda">Masukkan Email</string>
    <string name="masukkan_kata_sandi">Masukkan kata sandi</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masuk">Masuk</string>
    <string name="atau">Atau</string>
    <string name="saya_belum_memiliki_akun">Saya Belum Memiliki Akun</string>
    <string name="mendaftar_akun_secara_gratis_n_hingga_kapanpun">Mendaftar akun secara\n gratis hingga kapanpun</string>
    <string name="masukkan_nama_anda">Masukkan nama anda</string>
    <string name="mendaftar">Mendaftar</string>
    <string name="kembali_ke_halaman_login">Kembali ke halaman Login</string>
    <string name="jenis_kelamin">Jenis kelamin: </string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">perempuan</string>
    <string name="invalid_name">Maaf, nama tidak boloh kosong</string>
    <string name="invalid_email">Maaf, email yang anda masukkan tidak sesuai</string>
    <string name="invalid_password">Maaf, kata sandi minimal 6 karakter</string>
    <string name="jangan_khawatir_kami_akan_membantu_anda">Jangan khawatir, kami akan membantu anda</string>
    <string name="konfirmasi_email">Konfirmasi email</string>
    <string name="silahkan_tunggu">Silahkan Tunggu...</string>
    <string name="profil_saya">Profil</string>
    <string name="lokasi_saya">Lokasi</string>
    <string name="beranda">Beranda</string>

    <string name="map_key" translatable="false">AIzaSyCIIq07bf12436lUHGpqXxn3ICl2ydPXF4</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_instagram_bagas">@bagas_best</string>
    <string name="tv_content_tentang_app">Aplikasi tangani Covid-19 dikembangkan oleh Bagas Pangestu yang saat ini sedang menempuh pendidikan di Teknik Informatika ITERA, Aplikasi Tangani Covid-19 ini memiliki tujuan untuk memetakan kasus Covid-19 yang terjadi di Indonesia dan melaporkan keluhan yang dialami oleh masyarakat Indonesia baik diri sendiri maupun keluhan lingkungan sekitar. \n\n Anda dapat melaporkan indikasi terkait Covid-19 melalui Beranda kemudian menu Lapor Covid-19. \n\n Aplikasi ini juga berisi Trik dan Tips menghindari Covid-19 yang dapat anda terapkan di rumah ataupun di manapun.</string>
    <string name="immg">immg</string>


</resources>
