<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingBottom="20dp"
    tools:context=".PendaftaranUser">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mendaftar_akun_secara_gratis_n_hingga_kapanpun"
        android:textStyle="bold"
        android:textColor="#081460"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/m_medium" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:src="@drawable/logo_tanganicovid19"
        android:contentDescription="@string/img" />

    <EditText
        android:id="@+id/et_regis_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/masukkan_nama_anda"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:padding="9dp"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/et_regis_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/masukkan_email_anda"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:padding="9dp"
        android:autofillHints="no"
        tools:ignore="TextFields" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_regis_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/masukkan_kata_sandi"
            android:inputType="textPassword"
            android:background="@drawable/rounded_et"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:padding="9dp"
            android:autofillHints="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jenis_kelamin"
            android:fontFamily="@font/m_medium"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="#081460" />

        <RadioButton
            android:id="@+id/laki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/laki_laki"
            android:textSize="12sp"
            android:layout_marginStart="5dp"/>

        <RadioButton
            android:id="@+id/perempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perempuan"
            android:textSize="12sp"
            android:layout_marginStart="5dp"/>

    </RadioGroup>
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/mendaftar"
        android:textAllCaps="false"
        android:onClick="btn_mendaftar"
        android:fontFamily="@font/m_medium"
        android:textColor="@android:color/white"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kembali_ke_halaman_login"
        android:fontFamily="@font/m_medium"
        android:layout_gravity="end"
        android:layout_marginTop="15dp"
        android:onClick="gotologin"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#081460"
        tools:ignore="OnClick" />


</LinearLayout>