<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingBottom="20dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/masuk_untuk_memperoleh_ninformasi_terkait_covid_19"
        android:textStyle="bold"
        android:textColor="#081460"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/m_medium" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_tanganicovid19"
        android:contentDescription="@string/img" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_person"
        android:hint="@string/masukkan_email_atau_nama_anda"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:padding="9dp"
        android:autofillHints="no" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/masukkan_kata_sandi"
            android:inputType="textPassword"
            android:background="@drawable/rounded_et"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="10dp"
            android:padding="9dp"
            android:autofillHints="no" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_lupa_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_password"
        android:fontFamily="@font/m_medium"
        android:onClick="lupapassword"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:textColor="#081460"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:fontFamily="@font/m_medium"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atau"
        android:fontFamily="@font/m_medium"
        android:layout_marginTop="10dp"
        android:textColor="#081460" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saya_belum_memiliki_akun"
        android:onClick="mendaftar"
        android:textStyle="bold"
        android:fontFamily="@font/m_medium"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        android:textColor="#081460"
        tools:ignore="OnClick" />











</LinearLayout>