<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".LupaPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jangan_khawatir_kami_akan_membantu_anda"
        android:textStyle="bold"
        android:textColor="#081460"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="@font/m_medium" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="130dp"
        android:src="@drawable/logo_tanganicovid19"
        android:contentDescription="@string/img" />


    <EditText
        android:id="@+id/et_email_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/masukkan_email_anda"
        android:layout_marginTop="10dp"
        android:autofillHints="no"
        tools:ignore="TextFields"
        android:inputType="text"
        android:drawablePadding="10dp"
        android:padding="9dp" />



    <Button
        android:id="@+id/btn_konfirmasi_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/konfirmasi_email"
        android:onClick="konfirmasiEmailUser"
        android:textAllCaps="false"
        android:fontFamily="@font/m_medium"
        android:textColor="@android:color/white"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/tv_lupa_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kembali_ke_halaman_login"
        android:fontFamily="@font/m_medium"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:onClick="gotologin"
        android:textStyle="bold"
        android:textColor="#081460"
        tools:ignore="OnClick" />

</LinearLayout>